[gd_scene load_steps=14 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://art/start_2.png" type="Texture" id=2]
[ext_resource path="res://art/start_0.png" type="Texture" id=3]
[ext_resource path="res://art/start_1.png" type="Texture" id=4]
[ext_resource path="res://art/start_3.png" type="Texture" id=5]
[ext_resource path="res://art/Poco.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://art/menumusic.mp3" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 1.2
} ]

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 1
outline_color = Color( 0.12549, 0.815686, 0.623529, 1 )
extra_spacing_top = -9
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 1
outline_color = Color( 0.0941176, 0.588235, 0.8, 1 )
extra_spacing_top = -8
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 20
outline_size = 1
outline_color = Color( 0.862745, 0.486275, 0.384314, 1 )
extra_spacing_top = -8
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 1
outline_color = Color( 0.764706, 0.219608, 0.733333, 1 )
extra_spacing_top = -7
font_data = ExtResource( 6 )

[node name="Menu" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -720.0
margin_right = 1280.0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 640, 320 )
scale = Vector2( 1, 0.75 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.0
margin_top = 124.0
margin_right = 107.0
margin_bottom = 224.0
rect_scale = Vector2( 2, 2 )

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 138.0
margin_bottom = 21.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../ControlsButton")
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Start"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 138.0
margin_bottom = 47.0
focus_neighbour_bottom = NodePath("../CreditsButton")
custom_fonts/font = SubResource( 4 )
text = "Controls"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 51.0
margin_right = 138.0
margin_bottom = 73.0
focus_neighbour_top = NodePath("../ControlsButton")
focus_neighbour_bottom = NodePath("../QuitButton")
custom_fonts/font = SubResource( 6 )
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 138.0
margin_bottom = 100.0
focus_neighbour_bottom = NodePath("../StartButton")
custom_fonts/font = SubResource( 5 )
text = "Quit"

[node name="menumusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
